<resources>
    <string name="appName">SanPabLOOK</string>
    <string name="logIn">Login</string>
    <string name="signContinue">Sign in to continue</string>
    <string name="enterEmail">Enter your email</string>
    <string name="enterPassword">Enter your password</string>
    <string name="forgotPassword">FORGOT PASSWORD</string>
    <string name="provideEmail">Provide your account\'s email for which you want to reset your password</string>
    <string name="createNewAccount">Create new Account</string>
    <string name="alreadyRegister">Already Registered? Log in here.</string>
    <string name="firstName">FIRST NAME</string>
    <string name="enterFirstName">Enter First Name</string>
    <string name="lastName">LAST NAME</string>
    <string name="enterLastName">Enter Last Name</string>
    <string name="emailCaps">EMAIL</string>
    <string name="passwordCaps">PASSWORD</string>
    <string name="dateOfBirth">DATE OF BIRTH</string>
    <string name="selectDate">Select Date</string>
    <string name="makeSureValid">Make sure that your first name and last name reflect on your Valid ID.</string>
    <string name="signUp">Sign Up</string>
    <string name="taraPhil">Tara, Phil!</string>
    <string name="sampalocLake">Sampaloc Lake</string>
    <string name="taraSantayo">Tara na! San Tayo?</string>
    <string name="nature">Nature</string>
    <string name="sampalokLakeSanPabloLaguna">Sampalok Lake, San Pablo, Laguna</string>
    <string name="quickTutorial">Quick Tutorial</string>
    <string name="mohicap">Mohicap</string>
    <string name="pandinLake">Pandin Lake</string>
    <string name="sanPabloCityLaguna">San Pablo City, Laguna</string>
    <string name="mohicapLake">Mohicap Lake</string>
    <string name="calibatoLake">Calibato Lake</string>
    <string name="palakpakinLake">Palakpakin Lake</string>
    <string name="yamboLake">Yambo Lake</string>
    <string name="bunotLake">Bunot Lake</string>
    <string name="bikeDescription">Biking in Sampaloc Lake would definitely give another dimension in burning calories.You could rent a bike for only Php50 per hour.  </string>
    <string name="bikeQuickTutorial">There’s a small stall where you can rent bikes and ride around Dagatan Boulevard, the four kilometer road around Sampaloc lake.</string>
    <string name="bunotDescription">Bunot Lake, located in San Pablo, Laguna, is a charming and tranquil destination surrounded by lush greenery. To reach Bunot Lake, you can start from the town proper and head southwest towards Brgy. Concepcion. Once there, inquire with locals for specific directions to the lake. The journey typically involves navigating both paved and unpaved roads, so a vehicle with good clearance is advisable. Bunot Lake captivates visitors with its serene ambiance, providing an ideal spot for relaxation and appreciation of nature. Whether you\'re interested in leisurely boat rides or simply enjoying the peaceful surroundings, Bunot Lake offers a refreshing escape in the heart of Laguna.</string>
    <string name="bunotQuickTutorial">To reach Bunot Lake in San Pablo, Laguna, begin your journey from the town proper and head southwest toward Brgy. Concepcion. Follow the signs leading to the lake, and you may need to inquire with locals for precise directions. The route involves a mix of paved and unpaved roads, so it\'s recommended to use a vehicle with good clearance. Once you arrive at Bunot Lake, you\'ll be greeted by its serene atmosphere and lush surroundings. Whether you\'re interested in boating or simply relaxing by the water, Bunot Lake offers a peaceful retreat amidst nature in Laguna.</string>
    <string name="yamboDescription">Yambo Lake in San Pablo, Laguna, is a serene retreat surrounded by lush greenery and rolling hills. The pristine waters reflect the natural beauty, creating a tranquil atmosphere for visitors. Boat rides offer picturesque views, making Yambo Lake a hidden gem for relaxation in Laguna.</string>
    <string name="yamboQuickTutorial">To reach Yambo Lake in San Pablo, Laguna, drive southeast from the town proper on Rizal Avenue Extension, following signs to Brgy. San Buenaventura. Ask locals for directions to the lake, nestled in a picturesque landscape. The route includes both paved and unpaved roads, so a vehicle with good clearance is recommended. Enjoy the serene beauty of Yambo Lake once you arrive, and seek assistance if needed for a hassle-free journey.</string>
    <string name="hotelSelects">HOTEL</string>
    <string name="resortSelects">RESORT</string>
    <string name="bnbSelects">BNB</string>
    <string name="motelSelects">MOTEL</string>
    <string name="innSelects">INN</string>
    <string name="userLocation">18D Werner Schetelig Ave</string>
    <string name="hotel">Hotel</string>
    <string name="resort">Resort</string>
    <string name="bnb">BnB</string>
    <string name="motel">Motel</string>
    <string name="inn">Inn</string>
    <string name="deals">HOT DEALS</string>
    <string name="meding">Tahanan ni Aling Meding</string>
    <string name="medingPrice">₱1,099</string>
    <string name="casaPrice">₱3,900</string>
    <string name="preferred">MOST PREFERRED</string>
    <string name="searchHint">Tara na! Saan tayo?</string>
    <string name="palmera">Casa Palmera</string>
    <string name="palmeraPrice">₱1,345</string>
    <string name="diamond">Blue Diamond Court</string>
    <string name="mockRating">4.69</string>
    <string name="mockReview">420 Reviews</string>
    <string name="aboutCasaHotel">Casa San Pablo is within a sprawling family estate where you can reconnect with your loved ones — and yourself — through our unique, creative and cultural experiences. We offer family getaways, relaxing escapes, wedding party venues, team building spaces, celebrations, and creative wellness activities.</string>
    <string name="yourHost">Meet your host</string>
    <string name="line">____________________________________</string>
    <string name="casaProfileRating">4.54 ★ rating</string>
    <string name="casaProfileReviews">420 reviews</string>
    <string name="casaProfileHosting">6 months hosting</string>
    <string name="casaProfileInfo">We love to travel and share our experiences to others. We aim to assist and attract more tourists to visit the same place we’ve been.</string>
    <string name="casaLock">Lock on bedroom door</string>
    <string name="wifi">Wifi</string>
    <string name="bednbfast">Bed and Breakfast</string>
    <string name="park">Free parking on premise</string>
    <string name="cctv">Security cameras on property</string>
    <string name="pin">Events Place</string>
    <string name="stayRest">Where you\'ll be resting</string>
    <string name="casastayReview1">Had a great stay at Mr. Jak’s place. It is quiet and peaceful. Me and my part...</string>
    <string name="casastayReview2">So amazing! I love this place! I am alert, awake, thrilled, alive, enthusiastic. The food...</string>
    <string name="showmore">Show more >></string>
    <string name="availability">Availability</string>
    <string name="casaAvailable">September 9-24</string>
    <string name="cancel">Cancellation Policy</string>
    <string name="cancelInfo">This booking is non-refundable and non-negotiable. Review the Host’s full cancellation policy which applies even if you cancel for illness or disruptions caused by COVID-19.</string>
    <string name="houserules">House Rules</string>
    <string name="houserulesinfo">Check in : 12:00NN onwards
        \nCheckout before 10:00AM
        \n10 guests maximum</string>
    <string name="safetynproperty">Safety &amp; Property</string>
    <string name="safetynpropertyinfo">Security guards 24/7
        \nSecurity camera / recording device
        \n1 room = 1 vehicle
        \nLock-on-door rooms</string>
    <string name="booknow">BOOK NOW</string>
    <string name="medingLocation">Dagatan Blvd, San Pablo City, Laguna</string>
    <string name="aboutMeding">Finding an ideal luxury small hotel in San Pablo City does not have to be difficult. Welcome to Tahanan ni Aling Meding, a nice option for travelers like you. Tahanan ni Aling Meding puts the best of San Pablo City at your fingertips, making your stay both relaxing and enjoyable.</string>
    <string name="medingProfileInfo">Come and visit ang Tahanan ni Aling Meding, we offer guests a comfortable and secured stay at reasonable prices.</string>
    <string name="houserulesinfoMeding">Check in : 2:00 PM
        \nCheck-out: 12:00 NN
        \n2 guests maximum</string>
    <string name="medingAvailable">Always open</string>
    <string name="palmerasHotel">Casa Palmera Hotel</string>
    <string name="palmerasHotelLocation">Purok 3 Barangay, San Nicolas, San Pablo, Laguna, 4000</string>
    <string name="aboutPalmerasHotel">Casa Palmera Hotel is located in San Pablo. The Lifestyle Strip and The Outlets at Lipa are worth checking out if shopping is on the agenda, while those wishing to experience the area\'s natural beauty can explore Sampaloc Lake and Lake Bunot.</string>
    <string name="palmerasHotelProfileInfo">Take advantage of a garden, an arcade/game room, and dry cleaning/laundry services at Casa Palmera Hotel. The onsite local and international cuisine restaurant features light fare. Stay connected with free WiFi in public areas, and guests can find other amenities such as a gym and a conference center.</string>
    <string name="houserulesinfoPalmeras">Check in : 2:00 PM
        \nCheck-out: 12:00 NN
        \nMinimum check-in age: 18
        \nPets not allowed</string>
    <string name="blueDiamondotel">Blue Diamond Court</string>
    <string name="diamondHotelLocation">P379W+3R2, Pan-Philippine Hwy, San Pablo City, 4000 Laguna</string>
    <string name="aboutdiamondHotel">Casa Palmera Hotel is located in San Pablo. The Lifestyle Strip and The Outlets at Lipa are worth checking out if shopping is on the agenda, while those wishing to experience the area\'s natural beauty can explore Sampaloc Lake and Lake Bunot.</string>
    <string name="diamondHotelProfileInfo">Take advantage of a garden, an arcade/game room, and dry cleaning/laundry services at Casa Palmera Hotel. The onsite local and international cuisine restaurant features light fare. Stay connected with free WiFi in public areas, and guests can find other amenities such as a gym and a conference center.</string>
    <string name="houserulesinfoDiamond">Check in : 2:00 PM
        \nCheck-out: 12:00 NN
        \nMinimum check-in age: 18
        \nPets not allowed</string>
    <string name="search_title">Search</string>
    <string name="coconut">COCONUT</string>
    <string name="pinayte">PINAYTE</string>
    <string name="labelBookingsCancelled">Cancelled</string>
    <string name="labelBookingNumber">Booking No.</string>
    <string name="labelCustomerName">Customer Name</string>
    <string name="labelBookingDate">Booking Date</string>
    <string name="labelBookingTime">Booking Time</string>
    <string name="labelNoOfGuests">No. of Guests</string>
    <string name="labelNoOfPets">No. of Pets</string>
    <string name="labelRateYourStay">Rate your stay</string>
    <string name="confirmedEstablishment">Hotel Palmeras</string>
    <string name="confirmedBookingNumber">12-022</string>
    <string name="confirmedCustomerName">Phil Nguyen</string>
    <string name="confirmedBookingDate">01-12-24</string>
    <string name="confirmedBookingTime">8:00 AM</string>
    <string name="confirmedNumberOfGuests">5</string>
    <string name="cancelledEstablishment">Hotel Meding</string>
    <string name="cancelledBookingNumber">12-022</string>
    <string name="cancelledCustomerName">Phil Nguyen</string>
    <string name="cancelledBookingDate">01-12-24</string>
    <string name="cancelledBookingTime">8:00 AM</string>
    <string name="cancelledNumberOfGuests">5</string>
    <string name="cancelledNumberOfPets">2</string>
    <string name="backButton">Back</string>
</resources>